# autogamejournal

./: Cargo.toml  README.md  config.toml
src/: main.rs
