[package]
name = "autogamejournal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
image = { version = "0.25.1", features = ["png"] }
serde = { version = "1.0.200", features = ["std", "serde_derive"] }
tao = "0.27.1"
toml = "0.8.12"
tray-icon = "0.13.5"
windows = { version = "0.56.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }
windows-capture = "1.2.0"
winsafe = { version = "0.0.20", features = ["user", "kernel", "shell"] }
